v0.0.3: 重命名注解@Tool->@AgentMark/@P->@ParamDesc, 新增ClaudeProvider, 支持POJO字段递归解析, 降级JDK8+SpringBoot2.7, 默认使用Claude